--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <div class="item">
             <i class="map marker alternate icon"></i>
             <div class="content">
-              4 Place du Bois de Grâce, 77420 Champs-sur-Marne, France
+              16 Rue de Buzanval, 60000 Beauvais, France
             </div>
           </div>
 
@@ -58,6 +58,13 @@
             <i class="github icon"></i>
             <a class="content" href="https://www.github.com/SashioSama">
               github.com/SashioSama
+            </a>
+          </div>
+
+          <div class="item">
+            <i class="linkedin icon"></i>
+            <a class="content" href="https://www.linkedin.com/in/mohamad-chehimi-38908723a/">
+              linkedin.com/in/mohamad-chehimi
             </a>
           </div>
 
@@ -108,6 +115,20 @@
             </div>
             <div class="column" data-translate="BacDegreeTitle"></div>
           </div>
+          <!--           <div class="two column row">
+            <div class="column">
+              <div class="ui tiny header">
+                Title test left 
+                <p class="column">description test left</p>
+              </div>
+            </div>
+            <div class="column">
+              <div class="ui tiny header">
+                Title test right
+              </div>
+              <p class="column">description test right</p>
+            </div>
+          </div> -->
         </div>
       </div>
       <div class="column">
@@ -137,6 +158,26 @@
       </div>
 <div class="sixteen wide column">
         <h2 class="ui horizontal divider header">EXPERIENCES</h2>
+
+        <div class="ui two column grid">
+          <div class="two column row">
+            <div class="ui tiny header column" data-translate="SUP_ENG_EVBOX_Time"></div>
+            <div class="ui tiny header column" data-translate="SUP_ENG_EVBOX_Location"></div>
+          </div>
+        </div>
+        <ul class="ui list">
+          <div class="ui justified container">
+            <div class="ui tiny header column" data-translate="SUP_ENG_EVBOX_Title"></div>
+            <li data-translate="SUP_ENG_EVBOX_DESC1"></li>
+            <li data-translate="SUP_ENG_EVBOX_DESC2"></li>
+            <li data-translate="SUP_ENG_EVBOX_DESC3"></li>
+            <li data-translate="SUP_ENG_EVBOX_DESC4"></li>
+            <li data-translate="SUP_ENG_EVBOX_DESC5"></li>
+            <li data-translate="SUP_ENG_EVBOX_DESC6"></li>
+            <li data-translate="SUP_ENG_EVBOX_DESC7"></li>
+            <li data-translate="SUP_ENG_EVBOX_DESC8"></li>
+          </div>
+        </ul>
         
         <div class="ui two column grid">
           <div class="two column row">
@@ -310,9 +351,53 @@
 
         // Experiences
 
+        'SUP_ENG_EVBOX_Time': {
+          'en': "Aug. 2022 – Current",
+          'fr': 'Août 2022 - Présent',
+        },
+        'SUP_ENG_EVBOX_Title': {
+          'en': "Technical support engineer",
+          'fr': 'Ingénieur support technique',
+        },
+        'SUP_ENG_EVBOX_Location': {
+          'en': "EVBOX - Paris, France. (Remote)",
+          'fr': "EVBOX - Paris, France. (Télétravail)",
+        },
+        'SUP_ENG_EVBOX_DESC1': {
+          'en': "Provide direct technical support for multi-generational electrical vehicles (EV) charging stations for partners, on-site installers & end customers.",
+          'fr': "Fournir un support technique direct pour les stations de recharge de véhicules électriques (VE) multi-générationnelles aux partenaires, installateurs sur site et clients finaux.",
+        },
+        'SUP_ENG_EVBOX_DESC2': {
+          'en': "OCPP 1.6 (JSON) log troubleshooting, determining the root cause of main configuration/hardware malfunctions.",
+          'fr': "Lecture des logs OCPP 1.6 (JSON), détermination de la cause principale des dysfonctionnements de configuration/matériel.",
+        },
+        'SUP_ENG_EVBOX_DESC3': {
+          'en': "Hardware parts diagnostics for electrical & connectivity issues, such as power cables, SIM card modems, power supplies, integrated circuit boards, different types of electricity sockets, etc.",
+          'fr': "Diagnostic des pièces matérielles pour les problèmes de connectivité et éléctriques, tels que les câbles d'alimentation, les modems de carte SIM, les alimentations électriques, les cartes de circuit intégré, les différents types de prises électriques, etc.",
+        },
+        'SUP_ENG_EVBOX_DESC4': {
+          'en': "Customer relationship management (CRM): experienced in Salesforce & Jira platforms usage for internal & external communications.",
+          'fr': "Customer relationship management (CRM) : expérience dans l'utilisation des plateformes Salesforce & Jira pour les communications internes et externes.",
+        },
+        'SUP_ENG_EVBOX_DESC5': {
+          'en': "SIM card connectivity troubleshooting using service providers\' control centers via JasperWireless for KPN & Tele2 SIM cards, including but not limited to OCPP 1.6 SMS commands to modems for parameter changes.",
+          'fr': "Dépannage de la connectivité des cartes SIM en utilisant les centres de contrôle des fournisseurs de services via JasperWireless pour les cartes SIM KPN & Tele2, incluant mais sans s\'y limiter les commandes SMS OCPP 1.6 vers les modems pour les changements de paramètres.",
+        },
+        'SUP_ENG_EVBOX_DESC6': {
+          'en': "Direct work with multiple departments, including the diagnostics and sales departments. Work order creation and management for on-site support interventions, along with return merchandise authorization (RMA) via CRM - Logistics reliability.",
+          'fr': "Travail direct avec plusieurs départements, y compris les départements de diagnostic et commercial. Création et gestion des ordres de travail pour les interventions sur site, ainsi que l'autorisation de retour de marchandise (RMA) via le CRM - Fiabilité logistique.",
+        },        
+        'SUP_ENG_EVBOX_DESC7': {
+          'en': "Creating and editing procedural articles to optimize the time to resolution and simplify internal and external procedures (for colleagues, partners and installers).",
+          'fr': "Création et édition d'articles procéduraux pour optimiser le temps de résolution et simplifier les procédures internes et externes (pour les collègues, partenaires et installateurs).",
+        },
+        'SUP_ENG_EVBOX_DESC8': {
+          'en': "Assisting in ergonomic and bug reports for our day-to-day platform usage, including bug replication and demonstration, along with explaining the expected behavior.",
+          'fr': "Assistance dans la rédaction de rapports ergonomiques et de bogues pour notre utilisation quotidienne de la plateforme, y compris la reproduction et la démonstration des bogues, ainsi que l'explication du comportement attendu.",
+        },
         'DEV_INFF_Time': {
-          'en': "Mar. 2019 – Present",
-          'fr': 'Mars 2019 - Actuellement',
+          'en': "Mar. 2019 – July 2022",
+          'fr': 'Mars 2019 - Juillet 2022',
         },
         'DEV_INFF_Title': {
           'en': "Software developer",
