--- a/index.html
+++ b/index.html
@@ -711,7 +711,7 @@
         // Main page Title
 
         'Main Title': {
-          'en': 'COMPUTER ENGINEER',
+          'en': 'TECHNICAL SUPPORT ENGINEER',
           'fr': 'INGENIEUR DOMOTIQUE'
         },
 
